# -f1-racing-game

./: .gitignore  CMakeLists.txt  PHASE3-FIX-TODO.md  README.md  TODO.md  build.ps1  compile.bat  compile2.bat  compile_temp.bat  run_build.bat
assets/shaders/: bloom_down.frag  bloom_extract.frag  bloom_up.frag  chromatic.frag  motion_blur.frag  pbr.frag  pbr.vert  tonemap.frag
assets/shaders/textshaders/: base.vert  bloom_bright.frag  bloom_down.frag  bloom_up.frag  chromatic_aberration.frag  irradiance.cub  motion_blur.frag  particle_rain.frag  particle_rain.vert  pbr.frag  pbr.vert  prefilter.cub  skybox.frag  skybox.vert  tonemap_aces.frag  track_wet.frag  track_wet.vert  ui_text.frag  ui_text.vert
src/: main.cpp
src/audio/: AudioManager.cpp  AudioManager.hpp  miniaudio.h
src/core/: ECS.hpp  Engine.cpp  Engine.hpp  EventBus.hpp
src/game/: Car.cpp  Car.hpp  DRS.cpp  DRS.hpp  RaceManager.cpp  RaceManager.hpp  Track.cpp  Track.hpp
src/physics/: Aerodynamics.hpp  BrakingSystem.hpp  EngineDrivetrain.hpp  F1Constants.hpp  Suspension.cpp  Suspension.hpp  TireCompound.hpp  TireModel.hpp  VehicleBody.cpp  VehicleBody.hpp  VehicleConstants.hpp  WeightTransfer.hpp
src/render/: Camera.hpp  Renderer.cpp  Renderer.hpp  ShaderManager.cpp  ShaderManager.hpp
src/steam/: SteamManager.cpp  SteamManager.hpp
tools/: generate_ibl.bat  ibl_baker.py
